<resources>
    <string name="app_name">Productos de Mi Pueblo</string>
    <string name="texto_inicio">Negocios</string>
    <string name="nombre_del_negocio">Inserte Nombre del negocio</string>
    <string name="direccion_del_negocio">Inserte la direccion</string>
    <string name="descripcion_negocio">Tipo de negocio, o una breve descripcióno</string>
    <string name="descripcion_producto">inserte aqui la descripcion del producto como marca, peso y cosas asi</string>
    <string name="precio_producto">inserte el precio del producto aqui</string>
    <string name="cancelar">Cancelar</string>
    <string name="agregar">Añadir</string>
    <string name="simboloMas">+</string>
    <string name="simboloMenos">-</string>
    <string name="nombreCliente">Nombre</string>
    <string name="apellidoCliente">Apellidos</string>
    <string name="cedulaCliente">CC ó TI</string>
    <string name="DireccionCliente">Dirección</string>
    <string name="telefonoCliente">Telefono</string>
    <string name="button_enviar_datos_personales">Enviar</string>
    <string name="campoRequerido">Se Necesita </string>
    <string name="datosValidos">Datos Enviados</string>
    <string name="nombreProducto">Inserte aqui el nombre del producto</string>
    <string name="quitaProducto">X</string>
    <string name="precioProducto">Inserte aqui el precio del producto</string>
    <string name="cantidadProductos">Inserte aqui cantidad de productos</string>
    <string name="totalSolicitud">Total</string>
    <string name="enviarSolicitud">Solicitar</string>
    <string name="producto">Producto</string>
    <string name="cotizarProductos">Cotizar</string>
    <string name="cotizar">Cotizar</string>
    <string name="infoPersonal">Datos Personales</string>
    <string name="detalleProducto">Detalles del Producto</string>
    <string name="productosDisponibles">Productos Disponibles</string>
    <string name="productosSeleccionados">Productos Seleccionados</string>
    <string name="eliminarProducto">¿Desea eliminar este producto?</string>
    <string name="aceptarEliminado">Eliminar</string>
    <string name="ok">OK</string>
    <string name="solicitudProductosVacia">No tiene productos para comprar</string>
    <string name="cambiarNegocio">Cambiar Negocio</string>
    <string name="cambiarNegocioPregunta">¿ Cambiar Negocio ?</string>
    <string name="confirmacionCambiarNegocio">Si cambia el Negocio, la lista de productos se perdera</string>
    <string name="volverEnviarCompra">" ¿ Desea volver a enviar el pedido ?"</string>
    <string name="continuarCompra">Usted ya envio un pedido</string>
    <string name="aceptarYcontinuar">"SI"</string>
    <string name="inicio">NO</string>
    <string name="SincronizacionExito">Sincronizacion de Cantidades y Precios exitosa</string>
    <string name="SincronizacionFail">No se pudo Sincronizar las Cantidades y Precios</string>
    <string name="sincronizar">Sincronizar</string>
    <string name="disponible">Disponibles: </string>
    <string name="cantidadMayorDisponible">Cantidad seleccionada mayor a la disponible</string>
    <string name="escogerCantidadNoDisponible">NO es posible escoger esta cantidad!</string>
    <string name="limiteCantidad">La cantidad seleccionada es mayor a la disponible de alguno de los productos</string>
    <string name="PedidoRiesgoso">No es posible asegurar el cumplimiento del pedido</string>
</resources>