<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DatosCliente">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="661dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/editTextTelefonoCliente"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="52dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/bordes_redondos"
                android:ems="10"
                android:inputType="number"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                app:layout_constraintBottom_toTopOf="@+id/button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.51"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextDireccionCliente"
                app:layout_constraintVertical_bias="0.126" />

            <EditText
                android:id="@+id/editTextNombreCliente"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/bordes_redondos"
                android:ems="10"
                android:inputType="text"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.52"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.094" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp"
                android:text="@string/nombreCliente"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/editTextNombreCliente"
                app:layout_constraintEnd_toEndOf="@+id/editTextNombreCliente"
                app:layout_constraintHorizontal_bias="0.026"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.682" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp"
                android:text="@string/apellidoCliente"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/editTextApellidosCliente"
                app:layout_constraintEnd_toEndOf="@+id/editTextApellidosCliente"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/editTextApellidosCliente"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.906" />

            <EditText
                android:id="@+id/editTextApellidosCliente"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="52dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/bordes_redondos"
                android:ems="10"
                android:inputType="text"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextNombreCliente" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp"
                android:text="@string/cedulaCliente"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/editTextIdentificacionCliente"
                app:layout_constraintEnd_toEndOf="@+id/editTextIdentificacionCliente"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/editTextIdentificacionCliente"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.957" />

            <EditText
                android:id="@+id/editTextIdentificacionCliente"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="52dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/bordes_redondos"
                android:ems="10"
                android:inputType="number"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextApellidosCliente" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp"
                android:text="@string/DireccionCliente"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/editTextDireccionCliente"
                app:layout_constraintEnd_toEndOf="@+id/editTextDireccionCliente"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/editTextDireccionCliente"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.963" />

            <EditText
                android:id="@+id/editTextDireccionCliente"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="52dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/bordes_redondos"
                android:ems="10"
                android:inputType="text"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.51"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextIdentificacionCliente" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp"
                android:text="@string/telefonoCliente"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/editTextTelefonoCliente"
                app:layout_constraintEnd_toEndOf="@+id/editTextTelefonoCliente"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/editTextTelefonoCliente"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.96" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="36dp"
                android:background="@drawable/bordes_redondos"
                android:onClick="enviarDatosPersonales"
                android:text="@string/button_enviar_datos_personales"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>